# proofmesh-solana-guard

./: .env.example  .gitignore  .vercelignore  AGENTS.md  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.anchor.json  tsconfig.base.json  tsconfig.scripts.json  vercel.json
apps/demo/: index.html  package.json  tsconfig.json  tsconfig.test.json
apps/demo/src/: evidence.test.ts  evidence.ts  liveFlow.test.ts  liveFlow.ts  main.tsx  styles.css  verification.test.ts  verification.ts
artifacts/idl/: proofmesh_guard.json
artifacts/submission/: README.md
docs/: ARCHITECTURE.md  COLOSSEUM_SUBMISSION_COPY.md  DEMO_SCRIPT.md  DEVNET_EVIDENCE.md  DEVNET_RUNBOOK.md  LEDGER_VERIFICATION.md  PITCH_DECK_CONTENT.md  PITCH_VIDEO_SCRIPT.md  SDK_INTEGRATION.md  SPEC.md  SUBMISSION_NARRATIVE.md  SUBMISSION_READINESS_CHECKLIST.md  TECH_DEMO_SCRIPT_FINAL.md  WALLET_SMOKE.md
examples/dao-treasury-bot/: index.ts  package.json  tsconfig.json
examples/node-integration/: package.json
examples/node-integration/src/: index.ts
programs/proofmesh_guard/: Cargo.toml
programs/proofmesh_guard/src/: lib.rs
programs/proofmesh_guard/tests/: issue_permit.test.ts
scripts/devnet/: run_guarded_payout.test.ts  run_guarded_payout.ts
