[package]
name = "proofmesh_guard"
version = "0.1.0"
description = "ProofMesh Guard Anchor program for trust permit accounts."
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "proofmesh_guard"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
